--- a/scss/game.scss
+++ b/scss/game.scss
@@ -72,3 +72,8 @@ img {
         }
     }
 }
+
+#tg {
+    position: absolute;
+    right: 0px;
+}
